Hamburger menu bug on ios has been resolved

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -107,6 +107,7 @@ body
     border: none
     background: transparent !important
     margin-bottom: 0.5em !important
+    cursor: pointer
 
 .navbar-toggler .top-bar
     transform: rotate(45deg)
